Average of Levels in Binary Tree